feature(JobProxyModel): swagger spec is generated out of JobProxyModel
