# JobProxyModel/src/main/java/de/unibi/cebitec/bibiserv/jobproxy/model/task/TPorts.java
@@ -1,57 +1,13 @@
-package de.unibi.cebitec.bibiserv.jobproxy.model.task;//
-// This file was generated by the JavaTM Architecture for XML Binding(JAXB) Reference Implementation, v2.2.8-b130911.1802 
-// See <a href="http://java.sun.com/xml/jaxb">http://java.sun.com/xml/jaxb</a> 
-// Any modifications to this file will be lost upon recompilation of the source schema. 
-// Generated on: 2016.03.01 at 12:26:26 PM CET 
-//
+package de.unibi.cebitec.bibiserv.jobproxy.model.task;
 
-
-
-import javax.xml.bind.annotation.XmlAccessType;
-import javax.xml.bind.annotation.XmlAccessorType;
-import javax.xml.bind.annotation.XmlElement;
-import javax.xml.bind.annotation.XmlType;
-
+import io.swagger.annotations.ApiModelProperty;
 
 /**
  * Describe a list of host,container port values
- * 
- * <p>Java class for tPorts complex type.
- * 
- * <p>The following schema fragment specifies the expected content contained within this class.
- * 
- * <pre>
- * &lt;complexType name="tPorts">
- *   &lt;complexContent>
- *     &lt;restriction base="{http://www.w3.org/2001/XMLSchema}anyType">
- *       &lt;sequence>
- *         &lt;element name="port">
- *           &lt;complexType>
- *             &lt;complexContent>
- *               &lt;restriction base="{http://www.w3.org/2001/XMLSchema}anyType">
- *                 &lt;all>
- *                   &lt;element name="host" type="{http://www.w3.org/2001/XMLSchema}int"/>
- *                   &lt;element name="container" type="{http://www.w3.org/2001/XMLSchema}int"/>
- *                 &lt;/all>
- *               &lt;/restriction>
- *             &lt;/complexContent>
- *           &lt;/complexType>
- *         &lt;/element>
- *       &lt;/sequence>
- *     &lt;/restriction>
- *   &lt;/complexContent>
- * &lt;/complexType>
- * </pre>
- * 
- * 
  */
-@XmlAccessorType(XmlAccessType.FIELD)
-@XmlType(name = "tPorts", propOrder = {
-    "port"
-})
 public class TPorts {
 
-    @XmlElement(required = true)
+    @ApiModelProperty(required = true)
     protected TPorts.Port port;
 
     /**
@@ -79,30 +35,6 @@ public class TPorts {
     }
 
 
-    /**
-     * <p>Java class for anonymous complex type.
-     * 
-     * <p>The following schema fragment specifies the expected content contained within this class.
-     * 
-     * <pre>
-     * &lt;complexType>
-     *   &lt;complexContent>
-     *     &lt;restriction base="{http://www.w3.org/2001/XMLSchema}anyType">
-     *       &lt;all>
-     *         &lt;element name="host" type="{http://www.w3.org/2001/XMLSchema}int"/>
-     *         &lt;element name="container" type="{http://www.w3.org/2001/XMLSchema}int"/>
-     *       &lt;/all>
-     *     &lt;/restriction>
-     *   &lt;/complexContent>
-     * &lt;/complexType>
-     * </pre>
-     * 
-     * 
-     */
-    @XmlAccessorType(XmlAccessType.FIELD)
-    @XmlType(name = "", propOrder = {
-
-    })
     public static class Port {
 
         protected int host;
@@ -141,5 +73,4 @@ public class TPorts {
         }
 
     }
-
 }
