# JobProxyModel/src/main/java/de/unibi/cebitec/bibiserv/jobproxy/model/task/Task.java
@@ -1,67 +1,22 @@
-package de.unibi.cebitec.bibiserv.jobproxy.model.task;//
-// This file was generated by the JavaTM Architecture for XML Binding(JAXB) Reference Implementation, v2.2.8-b130911.1802 
-// See <a href="http://java.sun.com/xml/jaxb">http://java.sun.com/xml/jaxb</a> 
-// Any modifications to this file will be lost upon recompilation of the source schema. 
-// Generated on: 2016.03.01 at 12:26:26 PM CET 
-//
+package de.unibi.cebitec.bibiserv.jobproxy.model.task;
 
-
-
-import org.hibernate.validator.constraints.NotEmpty;
+import io.swagger.annotations.ApiModelProperty;
 
 import javax.validation.Valid;
 import javax.validation.constraints.Digits;
 import javax.validation.constraints.NotNull;
+import javax.validation.constraints.Size;
 import javax.xml.bind.annotation.XmlAccessType;
 import javax.xml.bind.annotation.XmlAccessorType;
-import javax.xml.bind.annotation.XmlElement;
 import javax.xml.bind.annotation.XmlRootElement;
-import javax.xml.bind.annotation.XmlType;
 
-
-/**
- * <p>Java class for anonymous complex type.
- *
- * <p>The following schema fragment specifies the expected content contained within this class.
- *
- * <pre>
- * &lt;complexType>
- *   &lt;complexContent>
- *     &lt;restriction base="{http://www.w3.org/2001/XMLSchema}anyType">
- *       &lt;sequence>
- *         &lt;element name="user" type="{http://www.w3.org/2001/XMLSchema}string"/>
- *         &lt;element name="cores" type="{http://www.w3.org/2001/XMLSchema}int" minOccurs="0"/>
- *         &lt;element name="memory" type="{http://www.w3.org/2001/XMLSchema}int" minOccurs="0"/>
- *         &lt;element name="cputime" type="{http://www.w3.org/2001/XMLSchema}int" minOccurs="0"/>
- *         &lt;element name="stdout" type="{http://www.w3.org/2001/XMLSchema}string" minOccurs="0"/>
- *         &lt;element name="stderr" type="{http://www.w3.org/2001/XMLSchema}string" minOccurs="0"/>
- *         &lt;element name="cmd" type="{http://www.w3.org/2001/XMLSchema}string"/>
- *         &lt;element name="container" type="{}tContainer"/>
- *       &lt;/sequence>
- *     &lt;/restriction>
- *   &lt;/complexContent>
- * &lt;/complexType>
- * </pre>
- *
- *
- */
 @XmlAccessorType(XmlAccessType.FIELD)
-@XmlType(name = "", propOrder = {
-    "user",
-    "cores",
-    "memory",
-    "cputime",
-    "stdout",
-    "stderr",
-    "cmd",
-    "container"
-})
 @XmlRootElement(name = "task")
 public class Task {
 
-    @XmlElement(required = true)
     @NotNull
-    @NotEmpty
+    @Size(min = 1)
+    @ApiModelProperty(required = true)
     protected String user;
 
     @Digits(integer = Integer.MAX_VALUE, fraction = 0)
@@ -77,7 +32,6 @@ public class Task {
 
     protected String stderr;
 
-    //@NotEmpty
     protected String cmd;
 
     @Valid
@@ -274,5 +228,4 @@ public class Task {
     public void setContainer(TContainer value) {
         this.container = value;
     }
-
 }
